# fleetwise-ai-python-react

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  pyrightconfig.json  render.yaml
.github/workflows/: ci.yml
data/documents/: fuel-management-policy.md  preventive-maintenance-procedures.md  safety-policies.md  vehicle-lifecycle-management.md  work-order-sop.md
data/inspections/: admin-fleet-checks-jan-2026.csv  bldg-insp-misc-2026.csv  ev-fleet-2026-04.csv  incident-followups-q1-2026.csv  inspections-2026-02-mixed-dates.csv  inspections-2026-03-batch-a.csv  inspections-2026-03-batch-b.csv  mid-year-rollup-2026.csv  parks-rec-spring-2026.csv  public-works-q1-2026.csv  vendor-supplied-2026-q1.csv  water-dept-feb-2026.csv
docs/: etl.md  migration-plan.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  test-setup.ts
frontend/src/api/: chat.test.ts  chat.ts  client.test.ts  client.ts  maintenance.test.ts  maintenance.ts  schemas.test.ts  schemas.ts  vehicles.test.ts  vehicles.ts  workOrders.test.ts  workOrders.ts
frontend/src/components/: Markdown.test.tsx  Markdown.tsx  Sidenav.test.tsx  Sidenav.tsx  Spinner.test.tsx  Spinner.tsx  StatCard.test.tsx  StatCard.tsx  StatusPill.test.tsx  StatusPill.tsx
frontend/src/contexts/: ChatContext.test.tsx  ChatContext.tsx
frontend/src/hooks/: useFleetData.test.tsx  useFleetData.ts
frontend/src/routes/: Chat.test.tsx  Chat.tsx  Dashboard.test.tsx  Dashboard.tsx  VehicleDetail.test.tsx  VehicleDetail.tsx  Vehicles.test.tsx  Vehicles.tsx  WorkOrderDetail.test.tsx  WorkOrderDetail.tsx  WorkOrders.test.tsx  WorkOrders.tsx
frontend/src/testing/: fixtures.ts  render.tsx  server.ts
src/fleetwise/: __init__.py  main.py  settings.py
src/fleetwise/ai/: __init__.py  agent.py  embeddings.py  prompts.py  providers.py  sse.py
src/fleetwise/ai/rag/: __init__.py  chunker.py  ingestion.py  vector_store.py
src/fleetwise/ai/tools/: __init__.py  _formatting.py  _retrieval.py  _session.py  document_search.py  fleet_query.py  inspection.py  maintenance.py  work_order.py
src/fleetwise/api/: __init__.py  chat.py  deps.py  maintenance.py  rate_limit.py  vehicles.py  work_orders.py
src/fleetwise/data/: __init__.py  db.py  seed.py
src/fleetwise/data/repositories/: __init__.py  inspection.py  maintenance.py  (+3 more)
src/fleetwise/domain/: __init__.py  dto.py  entities.py  enums.py  models.py
src/fleetwise/etl/: __init__.py  bootstrap.py  cli.py  extract.py  load.py  mapper.py  pipeline.py  schema.py  transform.py
tests/: conftest.py  test_health.py
tests/integration/: conftest.py  test_agent_rag_wiring.py  test_api_maintenance.py  test_api_vehicles.py  test_api_work_orders.py  test_chat_stream.py  test_chat_sync.py  test_etl_bootstrap.py  test_etl_cli.py  test_etl_pipeline.py  test_sqlite_aggregation.py
tests/unit/: test_agent_graph.py  test_chunker.py  test_dto_serialization.py  test_embeddings.py  test_etl_extract.py  test_etl_mapper.py  test_etl_transform.py  test_maintenance_repository.py  test_part_repository.py  test_rag_roundtrip.py  test_rate_limit.py  test_seed.py  test_settings.py  test_sse_framing.py  test_vehicle_repository.py  test_work_order_repository.py
tests/unit/test_tools/: test_fleet_query_tools.py  test_inspection_tool.py  test_maintenance_tools.py  test_work_order_tools.py
(+5 files in other folders)
